--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ workbench.xmi
 /Eclipse/.metadata
 /Eclipse/.metadata
 /Eclipse/.metadata
+/Eclipse/.metadata
+/Eclipse/.metadata/.plugins
+/Eclipse/.metadata/.plugins/org.eclipse.e4.workbench
